primaryボタンのデザインを統一

--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -13,6 +13,6 @@ div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-100 \
            flex justify-center items-center'
   = link_to new_contest_entry_path(@contest),
     data: { turbo_frame: '_top' },
-    class: 'text-stone-700 bg-stone-300 btn-primary-large' do
+    class: 'btn-primary' do
     i.fas.fa-plus.mr-2
     | 写真を追加する
