--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -18,7 +18,7 @@
   .flex.justify-center.items-center.mt-8.mx-8
     = link_to '新しい参加者を招待する',
       invite_contest_path(@contest),
-      class: 'btn-primary-large'
+      class: 'btn-primary'
 
 .mx-8.my-4.flex.justify-center
   = link_to 'キャンセル', user_contests_path(current_user),
