--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -26,4 +26,4 @@
 
 .mt-10.flex.justify-center.items-center
   = link_to '新しいコンテストを作成', new_contest_path,
-    class: 'btn-primary-small'
+    class: 'btn-primary mx-4 sm:mx-8'
