--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -38,7 +38,7 @@
 
   .sm:hidden.flex.justify-center.items-center.mx-4
     label(
-      class='btn-primary-large'
+      class='btn-primary'
     )
       i.fa-regular.fa-image.text-stone-500.mr-2.text-2xl
       | 写真を選ぶ
