--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,14 +12,9 @@
 
 */
 
-.btn-primary-large {
+.btn-primary {
     @apply text-stone-800 bg-white hover:bg-stone-200 text-lg border-2 border-stone-200
     font-bold text-center w-full max-w-96 py-4 rounded-full transition;
-}
-
-.btn-primary-small {
-    @apply text-stone-800 bg-white hover:bg-stone-200 text-base border-2 border-stone-200
-    font-bold text-center px-4 py-3 rounded-full transition;
 }
 
 .btn-submit {
