--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -23,7 +23,7 @@
           data: { controller: 'clipboard',
                   action: 'clipboard#copy',
                   clipboard_url_value: @invite_url },
-          class: 'btn-primary-large'
+          class: 'btn-primary'
 
   p.mt-6.text-center
     = link_to 'キャンセル', edit_contest_path(@contest),
