--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -10,7 +10,7 @@
             text-sm sm:text-lg font-semibold w-full max-w-56 sm:max-w-64 \
             border border-stone-300 hover:bg-stone-300 transition'
     = t('views.entries.new.to_contest_page')
-    i.fa-solid.fa-angle-right.ml-2
+    i.fa-solid.fa-chevron-right.ml-2
 
 .mt-6(
   data-controller='file-entry'
