--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -19,11 +19,12 @@
     )
 
       .mt-6.text-center
-        = button_tag '招待用URLをコピー',
-          data: { controller: 'clipboard',
-                  action: 'clipboard#copy',
-                  clipboard_url_value: @invite_url },
-          class: 'btn-primary'
+        = button_tag data: { controller: 'clipboard',
+          action: 'clipboard#copy',
+          clipboard_url_value: @invite_url },
+          class: 'btn-primary' do
+          i.fa-regular.fa-copy.mr-2
+          | 招待用URLをコピー
 
   p.mt-6.text-center
     = link_to 'キャンセル', edit_contest_path(@contest),
