--- a/app/views/contests/new.html.slim
+++ b/app/views/contests/new.html.slim
@@ -5,8 +5,10 @@
   h1.text-xl.sm:text-2xl.font-bold.text-black = t('views.contests.new.title')
 
   - if @contests.any?
-    = link_to 'コンテスト一覧へ', user_contests_path(current_user),
-      class: 'btn-secondary'
+    = link_to user_contests_path(current_user), class: 'btn-secondary' do
+      | コンテスト一覧へ
+      i.fa-solid.fa-chevron-right.ml-2
+
 .mx-4.sm:mx-8
   - if @contests.any?
     p.text-base.sm:text-lg.text-stone-800.my-6
