--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -6,8 +6,10 @@
     h1.text-xl.sm:text-2xl.font-bold.my-2.truncate = @contest.name
     p.text-base.text-stone-600 投票期日：#{@contest.deadline.strftime('%Y年%-m月%-d日')}
 
-  = link_to '編集', edit_contest_path(@contest),
-    class: 'btn-secondary'
+  = link_to edit_contest_path(@contest),
+    class: 'btn-secondary' do
+    | 編集
+    i.fa-solid.fa-chevron-right.ml-2
 
 = turbo_frame_tag 'content' do
   .flex.justify-center.items-center.mt-6.mx-4
