--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag 'form'
-.mx-8.my-4.flex.justify-center
+.mx-4.sm:mx-8.my-4.flex.justify-center
   = form_with model: @contest, locale: true,
     html: { class: 'w-full flex flex-col \
                     justify-center items-start' } do |f|
