--- a/app/views/contests/_participant.html.slim
+++ b/app/views/contests/_participant.html.slim
@@ -1,4 +1,4 @@
-.flex.items-center.mx-8.py-4.border-b-2.border-dashed.border-stone-200
+.flex.items-center.mx-4.sm:mx-8.py-4.border-b-2.border-dashed.border-stone-200
   .flex-grow.truncate
     = user.name
   - participant = user.participant_for(@contest)
