--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -32,7 +32,7 @@
     )
     .preview-container.mt-4 data-file-entry-target='preview'
 
-  .text-sm.text-stone-500.text-center.sm:text-right.mx-2.my-4
+  .text-sm.text-stone-500.text-center.sm:text-right.mx-4.sm:mx-2.my-4
     i.fa-solid.fa-circle-info.mr-2
     | 一度にアップロードできる写真の最大数は10枚です
 
