--- a/app/views/home/privacy.html.slim
+++ b/app/views/home/privacy.html.slim
@@ -1,9 +1,9 @@
 - set_meta_tags title: 'プライバシーポリシー'
 - set_meta_tags description: 'PixPickのプライバシーポリシーのページです。'
 
-.p-2
+.mx-4.sm:mx-8.my-4
+  h2.text-xl.font-bold.text-center プライバシーポリシー
   .leading-relaxed.text-sm.my-4
-    h2.text-xl.font-bold.text-center.my-2 プライバシーポリシー
     p 本ウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の管理者（以下、「管理者」といいます。）は、
       本サービスにおける、ユーザーの個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。
 
