--- a/app/views/home/terms.html.slim
+++ b/app/views/home/terms.html.slim
@@ -1,8 +1,8 @@
 - set_meta_tags title: '利用規約'
 - set_meta_tags description: 'PixPickの利用規約のページです。'
 
-.p-2
-  h2.text-xl.font-bold.text-center.my-2 利用規約
+.mx-4.sm:mx-8.my-4
+  h2.text-xl.font-bold.text-center 利用規約
   .leading-relaxed.text-sm.my-4
     p この利用規約（以下、「本規約」といいます。）は、このウェブサイト上で提供するサービス（以下、「本サービス」といいます。）
       の管理者（以下、「管理者」といいます。）が本サービスの利用条件を定めるものです。
