--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -1,10 +1,10 @@
 - set_meta_tags title: '家族や友人を招待する'
 - set_meta_tags description: 'コンテストに家族や友人を招待するためのページです。'
 
-.bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
+.bg-stone-100.px-4.sm:px-8.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black 家族や友人を招待する
 
-.mx-6.sm:mx-20
+.mx-4.sm:mx-8
   p.text-base.sm:text-xl.text-stone-800.my-6
     | 以下のURLからログインすることで、このコンテストに参加することができます。
     br
