--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -1,5 +1,5 @@
 - if @entries_with_score.any?
-  .w-full.px-4
+  .w-full
     .grid.grid-cols-2.sm:grid-cols-4.mx-auto.mt-4 data-controller="modal"
       dialog(
         data-modal-target="dialog"
