--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -7,7 +7,7 @@
     p.text-base.text-stone-600 投票期日：#{@contest.deadline.strftime('%Y年%-m月%-d日')}
 
   = link_to edit_contest_path(@contest),
-    class: 'btn-secondary' do
+    class: 'btn-secondary shrink-0' do
     | 編集
     i.fa-solid.fa-chevron-right.ml-2
 
