--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -6,9 +6,7 @@
     = t('views.entries.new.entry_photos')
 
   = link_to contest_path(@contest),
-    class: 'text-stone-700 bg-white rounded text-center py-2 rounded \
-            text-sm sm:text-lg font-semibold w-full max-w-56 sm:max-w-64 \
-            border border-stone-300 hover:bg-stone-300 transition'
+    class: 'btn-secondary w-full max-w-56 sm:max-w-64'
     = t('views.entries.new.to_contest_page')
     i.fa-solid.fa-chevron-right.ml-2
 
