--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -5,8 +5,8 @@
   h1.text-xl.sm:text-2xl.font-bold.text-black 家族や友人を招待する
 
 .mx-4.sm:mx-8
-  p.text-base.sm:text-xl.text-stone-800.my-6
-    | 以下のURLからログインすることで、このコンテストに参加することができます。
+  p.text-base.sm:text-lg.text-stone-800.my-6
+    = "以下のURLからログインすることで、「#{@contest.name}」に参加することができます。"
     br
     | URLをコピーして家族や友人をコンテストに招待しましょう！
 
