--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -1,4 +1,4 @@
-.flex.justify-between.items-center.mx-4.sm:mx-8.py-4.bg-white.border-b.border-stone-200
+.flex.justify-between.items-center.mx-4.sm:mx-8.py-4.bg-white
   - if user_signed_in?
     = link_to image_tag('logo.png',
                         alt: 'PixPickのロゴ',
