--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -51,7 +51,8 @@
           method: :delete,
           data: { action: 'click->modal#close',
                   turbo_confirm: t('views.entries.show.confirm_delete_photo') },
-          class: 'text-red-500 underline underline-offset-4 hover:text-orange-500'
+          class: 'text-red-500 underline underline-offset-4 \
+                  hover:text-orange-500'
 
         .mt-2.text-sm.text-stone-700
           = t('views.entries.show.delete_photo_hint')
