--- a/app/views/layouts/header/_menu.html.slim
+++ b/app/views/layouts/header/_menu.html.slim
@@ -9,13 +9,17 @@
 )
   button data-action='dropdown#toggle:stop'
     = image_tag user_avatar_url, alt: 'ユーザーアイコン',
-      class: 'h-full w-full max-h-12 max-w-12 min-h-8 min-w-8 sm:max-h-16 sm:max-w-16 rounded-full object-cover'
+      class: 'h-full w-full max-h-12 max-w-12 min-h-8 min-w-8 \
+              sm:max-h-16 sm:max-w-16 rounded-full object-cover'
   div(
     data-dropdown-target='menu'
     class='hidden absolute top-8 -right-3 mt-8 flex \
           w-screen rounded-md max-w-max'
   )
-    .text-s.bg-white.rounded-lg.border-2.border-stone-200.overflow-hidden.w-30.z-30
+    div(
+      class='text-s bg-white rounded-lg border-2 border-stone-200 \
+             overflow-hidden w-30 z-30'
+    )
       = link_to t('views.layouts.header.contest_index'),
         user_contests_path(current_user),
         data: { dropdown_target: 'menuItem' },
