--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,6 +62,8 @@ button:disabled:hover {
     flex: 1 1 calc(50% - 10px);
     max-width: calc(50% - 10px);
     aspect-ratio: 1 / 1;
+    margin-top: 2px;
+    margin-right: 2px;
 }
 
 @media (min-width: 640px) {
@@ -81,18 +83,18 @@ button:disabled:hover {
 
 .preview-item .remove-button {
     position: absolute;
-    top: -11.5px;
-    right: -11.5px;
+    top: -13.5px;
+    right: -13.5px;
     background-color: #ff4726;
     color: white;
     border: none;
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
+    width: 28px;
+    height: 28px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .preview-item .remove-button:hover {
