--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,17 +59,18 @@ button:disabled:hover {
 
 .preview-item {
     position: relative;
-    flex: 1 1 calc(50% - 10px);
-    max-width: calc(50% - 10px);
+    flex: 1 1 calc(50% - 13.5px);
+    max-width: calc(50% - 13.5px);
     aspect-ratio: 1 / 1;
     margin-top: 2px;
     margin-right: 2px;
+    overflow: visible;
 }
 
 @media (min-width: 640px) {
     .preview-item {
-        flex: 1 1 calc(25% - 10px);
-        max-width: calc(25% - 10px);
+        flex: 1 1 calc(25% - 13.5px);
+        max-width: calc(25% - 13.5px);
     }
 }
 
