--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -12,7 +12,7 @@
   = render 'entries/thumbnail_list'
 
 div class='fixed bottom-0 w-full max-w-screen-md h-fit px-4 py-2 bg-stone-100 \
-           flex justify-center items-center'
+           flex justify-center items-center z-50'
   = link_to new_contest_entry_path(@contest),
     data: { turbo_frame: '_top' },
     class: 'btn-primary' do
