コンテスト画面下部のサムネイルが「写真を追加する」ボタンで隠れてしまうバグを修正

--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -1,6 +1,6 @@
 - if @entries_with_score.any?
   .w-full
-    .grid.grid-cols-2.sm:grid-cols-4.mx-auto.mt-4 data-controller="modal"
+    .grid.grid-cols-2.sm:grid-cols-4.mx-auto.mt-4.mb-20 data-controller="modal"
       dialog(
         data-modal-target="dialog"
         class="px-4 py-8 rounded-lg backdrop:bg-black/80"
