--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -1,5 +1,5 @@
 - if !@contest.deadline_passed? && @entries_with_score.any?
-  .mx-4.sm:mx-8.text-center.my-6.text-base.text-stone-700 画像を選択して投票してください
+  .mx-4.sm:mx-8.text-center.my-6.text-base.text-stone-700 評価する写真を選択してください
 
 - if @contest.deadline_passed?
   .bg-red-200.py-4.my-4
