コンテスト参加画面のOGPでコンテスト名を表示するようにした 複数のコンテストを共有した場合でも、OGPから各コンテストが判別できるようにした。

--- a/app/views/participants/new.html.slim
+++ b/app/views/participants/new.html.slim
@@ -1,4 +1,4 @@
-- set_meta_tags title: 'コンテストに参加する'
+- set_meta_tags title: "「#{@contest.name}」に参加する"
 - set_meta_tags description: 'PixPickで開催されている写真コンテストに参加するためのページです。'
 
 .bg-stone-100.px-4.sm:px-8.py-3.flex.justify-between.items-center.border-none
