コンテスト画面の文字色に関するTailswindのクラスを整理 文字色のデフォルトカラーを設定したことに伴う整理。

--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -21,4 +21,4 @@
 
             = render 'entries/score', entry_id: entry.id, score: score
 - else
-  p.mt-8.text-center.text-stone-700.text-base エントリーがありません。
+  p.mt-8.text-center.text-base エントリーがありません。
