--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -3,7 +3,7 @@
 
 .flex.justify-between.items-center.bg-stone-100.px-4.sm:px-8.py-3
   .overflow-hidden
-    h1.text-xl.sm:text-2xl.font-bold.my-2.truncate = @contest.name
+    h1.text-xl.sm:text-2xl.font-bold.text-stone-800.my-2.truncate = @contest.name
     p.text-base.text-stone-600 投票期日：#{@contest.deadline.strftime('%Y年%-m月%-d日')}
 
   = link_to edit_contest_path(@contest),
