--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -8,7 +8,7 @@
       = f.label :name, t('activerecord.attributes.contest.name'),
         class: 'text-base font-medium text-stone-800 text-left'
       = f.text_field :name, placeholder: '例：うちの子の写真コンテスト',
-        class: 'text-stone-700 border-stone-300 rounded-md \
+        class: 'border-stone-300 rounded-md \
                 focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
     .flex.flex-col.mt-4
@@ -16,7 +16,7 @@
         class: 'text-base font-medium text-stone-800 text-left'
       .flex.items-center
         = f.date_field :deadline,
-          class: 'block w-30 text-stone-700 border-stone-300 rounded-md \
+          class: 'block w-30 border-stone-300 rounded-md \
                   focus:ring-cyan-500 focus:border-cyan-500'
         .ml-2 まで
 
