エントリー評価画面の文字色に関するTailswindのクラスを整理 文字色のデフォルトカラーを設定したことに伴う整理と調整。

--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -11,7 +11,7 @@
             class: 'max-w-full max-h-full h-72 sm:h-auto object-contain',
             data: { action: 'load->image-status#finish' }
 
-    p.text-center.my-6.text-base.text-stone-500.mx-4
+    p.text-center.my-6.text-base.mx-4
       | 点数を選択してください
 
     .flex.justify-center.mt-6.space-x-6.sm:space-x-8
@@ -54,5 +54,5 @@
           class: 'text-red-500 underline underline-offset-4 \
                   hover:text-orange-500'
 
-        .mt-2.text-sm.text-stone-700
+        .mt-2.text-sm
           = t('views.entries.show.delete_photo_hint')
