--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -6,14 +6,14 @@
 
     .w-full
       = f.label :name, t('activerecord.attributes.contest.name'),
-        class: 'text-base font-medium text-stone-800 text-left'
+        class: 'text-base font-medium text-left'
       = f.text_field :name, placeholder: '例：うちの子の写真コンテスト',
         class: 'border-stone-300 rounded-md \
                 focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
     .flex.flex-col.mt-4
       = f.label :deadline, t('activerecord.attributes.contest.deadline'),
-        class: 'text-base font-medium text-stone-800 text-left'
+        class: 'text-base font-medium text-left'
       .flex.items-center
         = f.date_field :deadline,
           class: 'block w-30 border-stone-300 rounded-md \
