--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -8,7 +8,7 @@
 
 .mt-8.w-full.mx-auto
   .mx-4.sm:mx-8.border-b-2.border-stone-200.pb-2
-    h2.text-stone-800.font-bold 参加者
+    h2.font-bold 参加者
   = turbo_frame_tag 'participants_list'
     = render 'participants_list'
   - @users.each do |user|
