--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -5,7 +5,7 @@
   h1.text-xl.sm:text-2xl.font-bold.text-black 家族や友人を招待する
 
 .mx-4.sm:mx-8
-  p.text-base.sm:text-lg.text-stone-800.my-6
+  p.text-base.sm:text-lg.my-6
     = "以下のURLからログインすることで、「#{@contest.name}」に参加することができます。"
     br
     | URLをコピーして家族や友人をコンテストに招待しましょう！
@@ -28,4 +28,4 @@
 
   p.mt-6.text-center
     = link_to 'キャンセル', edit_contest_path(@contest),
-      class: 'text-stone-700 hover:underline'
+      class: 'hover:underline'
