--- a/app/views/shared/_toast.html.slim
+++ b/app/views/shared/_toast.html.slim
@@ -37,5 +37,5 @@
                  8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z'
             )
       .ms-3
-        p.text-sm class=toast_text_css(toast[:type])
+        p.text-sm
           = toast[:message]
