--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -44,7 +44,7 @@
 }
 
 .entry-nav-button {
-    @apply flex items-center px-6 py-2 text-stone-700 bg-white rounded border border-stone-300 hover:bg-stone-300;
+    @apply flex items-center px-6 py-2 bg-white rounded border border-stone-300 hover:bg-stone-300;
 }
 
 .rank {
