--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,8 @@ html.bg-stone-200
     = javascript_importmap_tags
     = display_meta_tags default_meta_tags
 
-  body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white.text-stone-700
+  body class='max-w-screen-md mx-auto min-h-screen\
+              flex flex-col bg-white text-stone-700'
     header
       #flash.fixed.top-5.left-1/2.-translate-x-1/2.z-50.space-y-4
         = render 'shared/flash'
