--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -16,7 +16,7 @@
 
     .flex.justify-center.mt-6.space-x-6.sm:space-x-8
       - [1, 2, 3].each do |score|
-        - score_variant = score_button_classes(@entry, current_user, score)
+        - score_variant = score_button_variant(@entry, current_user, score)
         = button_to score.to_s,
           contest_entry_votes_path(@contest, @entry, score:),
           method: :post,
